--- a/src/home/resume.css
+++ b/src/home/resume.css
@@ -56,6 +56,10 @@ li {
   font-color: #7F7F7F;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 #app {
   margin: 15px auto;
   min-width: 690px;
