--- a/src/home/resume.css
+++ b/src/home/resume.css
@@ -1,8 +1,8 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:400,400i,500,600';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,400i,500,600';
 
 * {
- font-family: 'Roboto', sans-serif;
- font-weight: 400;
+ font-family: 'Open Sans', sans-serif;
+ font-weight: normal;
  text-decoration: none;
  color: #404040;
  margin: 0;
@@ -10,8 +10,8 @@
 
 h1 {
   font-size: 18px;
-  font-weight: 600;
-  color: #79AE3D;
+  font-weight: bolder;
+  color: #000000;
   text-transform: uppercase;
   text-align: center;
 
@@ -20,7 +20,7 @@ h1 {
 
 h2 {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: bold;
   text-align: center;
 
   margin-bottom: 8px;
@@ -28,14 +28,14 @@ h2 {
 
 h3 {
   font-size: 13px;
-  font-weight: 500;
+  font-weight: bold;
 
   margin-bottom: 6px;
 }
 
 h4 {
   font-size: 12px;
-  font-weight: 500;
+  font-weight: bold;
   font-color: #7F7F7F;
 
   margin-bottom: 4px;
@@ -44,6 +44,7 @@ h4 {
 p {
   font-size: 12px;
   font-color: #7F7F7F;
+  text-align: center;
 }
 
 ul {
@@ -58,6 +59,10 @@ li {
 
 a:hover {
   text-decoration: underline;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 #app {
@@ -76,17 +81,17 @@ a:hover {
 }
 
 .contact-information {
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   display: flex;
   justify-content: space-between;
 }
 
 .objective {
-  margin: 10px 0;
+  margin: 14px 0;
 }
 
 .education {
-  margin: 10px 0;
+  margin: 14px 0;
 }
 
 .education-highlights {
@@ -99,12 +104,16 @@ a:hover {
   margin: 0 10px;
 }
 
-.education > h3, .education > div > h4 {
-  text-align: center;
+.education > h3 {
+  text-align: left;
 }
 
 .education-current {
   margin-bottom: 4px;
+}
+
+.education-current > p {
+  text-align: left;
 }
 
 .education-current > ul {
@@ -116,17 +125,21 @@ a:hover {
   margin: 0 10px;
 }
 
+.education-completed > p {
+  text-align: left;
+}
+
 .education-completed > ul {
   display: flex;
   justify-content: space-between;
 }
 
 .technical-experience {
-  margin: 10px 0;
+  margin: 14px 0;
 }
 
 .technical-experience-item {
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .technical-experience:last-child {
@@ -138,8 +151,12 @@ a:hover {
   padding-left: 20px;
 }
 
+.technical-experience-item > p.description {
+  text-align: left;
+}
+
 .programming-languages {
-  margin: 10px 0;
+  margin: 14px 0;
 }
 
 .programming-languages > ul {
