--- a/src/home/resume.css
+++ b/src/home/resume.css
@@ -75,23 +75,34 @@ a:hover {
 
 .separator {
   width: 80%;
-  margin: 0 auto;
+  margin: 9px auto;
   height: 1px;
   background-color: #808080;
 }
 
 .contact-information {
-  margin-bottom: 16px;
-  display: flex;
-  justify-content: space-between;
+  margin-bottom: 0;
+}
+
+.contact-information > ul {
+  text-align: center;
+}
+
+.contact-information > ul > li {
+  display: inline-block;
+  margin-right: 16px;
+}
+
+.contact-information > ul > li:last-child {
+  margin-right: 0;
 }
 
 .objective {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .education {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .education-highlights {
@@ -135,11 +146,11 @@ a:hover {
 }
 
 .technical-experience {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .technical-experience-item {
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .technical-experience:last-child {
@@ -156,7 +167,7 @@ a:hover {
 }
 
 .programming-languages {
-  margin: 16px 0;
+  margin: 0;
 }
 
 .programming-languages > ul {
