update to webpack

--- a/src/pages/resume/resume.css
+++ b/src/pages/resume/resume.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,400i,500,600';
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400i,500,600);
 
 * {
  font-family: 'Open Sans', sans-serif;
